# Additional-Packages

./: README.md
PackageMods/: Package Modifications Reference~  package_mods.bash~  setup_mpc_workspace_indigo.bash  setup_mpc_workspace_kinetic.bash
PackageMods/launch/: control_modified.launch  description_modified.launch  huskywithvelo_empty_world.launch  spawn_huskywithvelo.launch
PackageMods/meshes/: VLP16_mount.dae  VLP16_mount.stl
PackageMods/xacro/: VLP-16.gazebo.xacro  VLP-16.urdf.xacro  description_modified.gazebo.xacro  description_modified.xacro  huskywithvelo.gazebo.xacro  huskywithvelo.urdf.xacro  sick_lms100.gazebo.xacro
extract_pose/: CMakeLists.txt  package.xml
extract_pose/src/: extract_pose.cpp
globalplanner/: CMakeLists.txt~  package.xml
globalplanner/src/: globalplanner.cpp
